# search_with_machine_learning_course

./: flask_week3.sh  pyproject.toml
opensearch/: bbuy_products.json  bbuy_queries.json
week1/: opensearch.py  search.py
week1/static/: style.css
week1/templates/: aggregations.jinja2  base.jinja2  display_results.jinja2  search_results.jinja2
week2/utilities/: build_ltr.py
week3/: README.md  createContentTrainingData.py  createProductsDataframe.py  documents.py  extractTitles.py
week3/exploration/: content_classification.ipynb  project-level1.ipynb  project-level2.ipynb  project-level3.ipynb  synonyms-fasttext.ipynb  week3_integration.ipynb
