[tool.poetry]
name = "search_with_machine_learning_course"
version = "0.1.0"
description = ""
authors = ["Amardeep Singh <amardeeps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
xgboost = "^1.5.2"
requests = "^2.27.1"
ipython = "^8.0.1"
ipykernel = "^6.9.1"
urljoin = "^1.0.0"
matplotlib = "^3.5.1"
graphviz = "^0.19.1"
pandas = "^1.4.1"
numexpr = "^2.8.1"
Flask = "^2.0.3"
opensearch-py = "^1.0.0"
fasttext = "^0.9.2"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
